# intel-gpu-stats

./: Cargo.toml  INSTRUCTION.md  LICENSE  README.md
examples/: json_output.rs  list_gpus.rs  monitor.rs
src/: error.rs  lib.rs  types.rs  windows.rs
src/linux/: fdinfo.rs  hwmon.rs  mod.rs  perf.rs  pmu.rs  rapl.rs  throttle.rs
src/windows/: d3dkmt.rs  dxgi.rs  mod.rs
