[package]
name = "intel-gpu-stats"
version = "0.1.0"
edition = "2021"
authors = ["Simon Perens <simon@eyevinn.se>"]
license = "Apache-2.0"
description = "Real-time Intel GPU statistics monitoring via i915/xe PMU"
repository = "https://github.com/srperens/intel-gpu-stats"
documentation = "https://docs.rs/intel-gpu-stats"
readme = "README.md"
keywords = ["intel", "gpu", "monitoring", "quicksync", "i915"]
categories = ["hardware-support", "os::linux-apis"]
rust-version = "1.70"

[dependencies]
libc = "0.2"
thiserror = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Graphics_Direct3D"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[[example]]
name = "monitor"
path = "examples/monitor.rs"

[[example]]
name = "list_gpus"
path = "examples/list_gpus.rs"

[[example]]
name = "json_output"
path = "examples/json_output.rs"
