[package]
name = "intel-gpu-stats"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Cross-platform Intel GPU statistics monitoring"
repository = "https://github.com/AUR/intel-gpu-stats"
keywords = ["intel", "gpu", "monitoring", "quicksync", "vaapi"]
categories = ["hardware-support", "os"]

[dependencies]
libc = "0.2"
thiserror = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Win32_Security",
] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[[example]]
name = "monitor"
path = "examples/monitor.rs"

[[example]]
name = "list_gpus"
path = "examples/list_gpus.rs"

[[example]]
name = "json_output"
path = "examples/json_output.rs"
